# purge-deps

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: main.rs
